Fix z-index for background transition to make it visible

--- a/style.css
+++ b/style.css
@@ -848,7 +848,7 @@ body {
   width: 100%;
   height: 100%;
   pointer-events: none;
-  z-index: -1;
+  z-index: 1;
   opacity: 0;
   transition: opacity 1s ease;
 }
